<resources>
    <string name="app_name">My Contact LIst</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="toggleButton">OFF</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="contactHint">Name</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">ZipCode</string>
    <string name="address">Address:</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="email_address">Email Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="sort_order">Sort Order:</string>
    <string name="birthdayText">Birthday</string>
    <string name="cityRadioText">City</string>
    <string name="nameRadioText">Name</string>
    <string name="sort_contacts_by">Sort Contacts By:</string>
    <string name="delete">DELETE</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="none">None</string>
</resources>